# psysonic

./: .dependency-cruiser-known-violations.json  .dependency-cruiser.cjs  .gitignore  CHANGELOG.md  README.md  WHATS_NEW.md  eslint.config.gradual.mjs  eslint.config.mjs  package-lock.json  package.json
.github/scripts/: ci-ok-aggregate.mjs
.github/workflows/: eslint.yml  reusable-channel-publish.yml
nix/: upstream-sources.json
src/: App.tsx  hotCachePrefetch.ts  i18n.ts  localPlaybackInvalidation.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.signing.example.json
src-tauri/crates/psysonic-analysis/: Cargo.toml
src-tauri/crates/psysonic-analysis/src/: analysis_runtime.rs  commands.rs  track_analysis_plan.rs
src-tauri/crates/psysonic-analysis/src/analysis_cache/: compute.rs  mod.rs  store.rs
src-tauri/crates/psysonic-audio/: Cargo.toml
src-tauri/crates/psysonic-audio/src/: autoeq_commands.rs  commands.rs  device_commands.rs  device_watcher.rs  mix_commands.rs  playback_rate.rs  preload_commands.rs  preview.rs  radio_commands.rs  sources.rs  transport_commands.rs
src-tauri/crates/psysonic-integration/: Cargo.toml
src-tauri/crates/psysonic-integration/src/: bandsintown.rs  discord.rs  remote.rs
src-tauri/crates/psysonic-integration/src/navidrome/: client.rs  covers.rs  playlists.rs  queries.rs  users.rs
src-tauri/crates/psysonic-library/: Cargo.toml
src-tauri/crates/psysonic-library/migrations/: 014_artist_name_sort.sql
src-tauri/crates/psysonic-library/src/: advanced_search.rs  analysis_backfill.rs  artist_sort.rs  browse_support.rs  commands.rs  cover_backfill.rs  cover_resolve.rs  dto.rs  genre_album_browse.rs  genre_tags_backfill.rs  lib.rs  live_search.rs  lossless_albums.rs  lossless_formats.rs  search.rs  store.rs
src-tauri/crates/psysonic-library/src/repos/: artist.rs  mod.rs  sync_state.rs
src-tauri/crates/psysonic-library/src/server_cluster/: advanced_search.rs  db.rs  detail.rs  keys.rs  list_albums.rs  list_artists.rs  list_favorites.rs  mod.rs  norm.rs  play_stats.rs  rebuild.rs
src-tauri/crates/psysonic-library/src/sync/: artist_index.rs  delta.rs  initial.rs  mod.rs
src-tauri/crates/psysonic-syncfs/: Cargo.toml
src-tauri/crates/psysonic-syncfs/src/cache/: downloads.rs  hot.rs  local.rs  offline.rs
src-tauri/crates/psysonic-syncfs/src/sync/: batch.rs  device.rs
src-tauri/src/: lib.rs  main.rs  taskbar_win.rs  theme_animation.rs  theme_import.rs
src/api/: analysis.ts  coverCache.test.ts  library.ts  subsonicClient.ts  subsonicLibrary.ts  subsonicPlaylists.ts  subsonicSearch.ts  subsonicStarRating.ts  subsonicStreamUrl.ts  subsonicTypes.ts
src/app/: AppRoutes.tsx  AppShell.tsx  AppShellQueueResizerSeam.tsx  BlockingMigrationGate.tsx  ConnectionIndicator.tsx  DevNetworkModeToggle.tsx  ErrorBoundary.tsx  MainApp.tsx  MiniPlayerApp.test.tsx  MiniPlayerApp.tsx  PerfOverlaySparkline.tsx  TauriEventBridge.tsx  TitleBar.tsx  appShellHelpers.ts  bootstrap.test.ts  seamRegistration.smoke.test.ts
src/components/: AboutPsysonicLol.tsx  AlbumCard.tsx  AlbumHeader.tsx  AlbumRow.tsx  AlbumTrackList.tsx  AppUpdater.tsx  ArtistCardLocal.tsx  BackToTopButton.tsx  BecauseYouLikeRail.tsx  CachedImage.tsx  ConfirmDialog.test.tsx  ConnectionIndicator.tsx  ContextMenu.test.tsx  ContextMenu.tsx  Equalizer.tsx  FpsOverlay.tsx  GenreFilterBar.tsx  GlobalConfirmModal.tsx  Hero.tsx  HostApprovalQueue.tsx  LicensesPanel.tsx  LiveSearch.tsx  MiniPlayer.test.tsx  MiniPlayer.tsx  MobileMoreOverlay.tsx  MobilePlayerView.tsx  MobileSearchOverlay.tsx  Modal.test.tsx  NowPlayingDropdown.tsx  NowPlayingInfo.tsx  OrbitAccountPicker.tsx  OrbitDiagnosticsPopover.tsx  OrbitExitModal.tsx  OrbitGuestQueue.tsx  OrbitParticipantsPopover.tsx  OrbitReconnectModal.test.tsx  OrbitReconnectModal.tsx  OrbitSessionBar.tsx  OrbitSettingsPopover.tsx  OrbitSharePopover.tsx  (+21 more)
src/config/: moodGroups.test.ts  settingsCredits.test.ts  settingsCredits.ts  shortcutActionRegistry.ts  shortcutActions.ts  shortcutBindings.ts  shortcutDispatch.ts  shortcutTypes.ts
src/contexts/: DragDropContext.tsx
src/cover/: AlbumCoverArtImage.tsx  ArtistCoverArtImage.tsx  CoverArtImage.tsx  TrackCoverArtImage.tsx  artistBackdrop.test.ts  artistBackdrop.ts  artistHero.tsx  coverArtRegisteredSizes.test.ts  coverBlobDownscale.ts  coverTraffic.test.ts  coverTraffic.ts  ensureQueue.test.ts  ensureQueue.ts  heroBackdropMemory.test.ts  heroBackdropMemory.ts  index.ts  isRealArtistImage.ts  layoutSizes.ts  lightbox.test.tsx  lightbox.tsx  peekQueue.ts  prefetchRegistry.ts  ref.test.ts  ref.ts  resolveDisk.test.ts  resolveDisk.ts  resolveEntry.ts  resolveEntryLibrary.ts  resolveJs.test.ts  resolveJs.ts  storageKeys.test.ts  useArtistFanart.ts  useCoverArtPrefetch.ts  useCoverCacheEvictTick.ts  useCoverNavigationPriority.ts  useCoverPerfListener.ts  useCoverRevalidateScheduler.ts  useHeroBackdrop.ts  useLibraryCoverBackfill.ts  useLibraryCoverPrefetch.ts  (+5 more)
src/hooks/: useAlbumBrowseData.ts  useAlbumBrowseFilters.ts  useAlbumBrowseScrollRestore.ts  useAlbumDetailBack.ts  useAlbumDetailData.ts  useAlbumGridBrowseFilters.ts  useAlbumOfflineState.test.ts  useAlbumOfflineState.ts  useAlbumTrackListSelection.ts  useAppUpdater.ts  useArtistDetailData.ts  useArtistsBrowseCatalog.ts  useAudioDevicesProbe.ts  useBrowseAlbumTextSearch.test.ts  useBrowseAlbumTextSearch.ts  useBrowseArtistTextSearch.ts  useCardGridMetrics.ts  useClientSliceInfiniteScroll.ts  useClusterConnectionLed.ts  useClusterMemberDisplayLabel.ts  useComposersBrowseFilters.ts  useComposersBrowseScrollRestore.ts  useConnectionStatus.test.ts  useConnectionStatus.ts  useDeviceSyncBrowser.ts  useDeviceSyncDrives.ts  useDeviceSyncSourceStatuses.ts  useFavoritesData.ts  useFsIdleFade.ts  (+50 more)
(+1267 files in other folders)
